--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,13 @@
     }
   ],
   "require": {
+    "hirak/prestissimo": "^0.3",
+    "zaporylie/composer-drupal-optimizations:^1.0",
     "drupal-composer/drupal-scaffold": "^2.5",
     "cweagans/composer-patches": "^1.6",
     "drupal/core": "^8.0",
     "drush/drush": "^9.0",
     "drupal/console": "^1.0",
-    "hirak/prestissimo": "^0.3",
     "oomphinc/composer-installers-extender": "^1.1"
 
   },
