--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   ],
   "require": {
     "hirak/prestissimo": "^0.3",
-    "zaporylie/composer-drupal-optimizations:^1.0",
+    "zaporylie/composer-drupal-optimizations": "^1.0",
     "drupal-composer/drupal-scaffold": "^2.5",
     "cweagans/composer-patches": "^1.6",
     "drupal/core": "^8.0",
